# RS034-makehouseofqt

./: CMakeLists.txt  Dockerfile  README.md  drawingarea.cpp  main.cpp  mainwindow.h  simple_bash.sh
code/: code.pro  drawingarea.cpp  drawingarea.h  main.cpp  mainwindow.cpp  mainwindow.h  za_git.pro
qt_project/: door.cpp  door.h  drawingarea.cpp  drawingarea.h  floor.cpp  floor.h  house.cpp  house.h  inputdialog.cpp  inputdialog.h  inputdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  qt_project.pro  selectingform.cpp  selectingform.h  selectingform.ui  wall.cpp  wall.h  wallsmodelview.cpp  wallsmodelview.h  window.cpp  window.h
